# rivet

./: .gitignore  Cargo.toml  LICENSE  README.md  container-compose.yaml  dev.py  example_pipeline.lua
documents/: Tasks.md
examples/: .luarc.json  container_process.lua  only_loggin.lua  pipeline_builder.lua  pipeline_define.lua  simple_process.lua
examples/.rivet/stubs/: env.lua  log.lua  process.lua
rivet-cli/: Cargo.toml
rivet-cli/src/: config.rs  id_resolver.rs  main.rs  types.rs
rivet-cli/src/api/: mod.rs
rivet-cli/src/commands/: init.rs  job.rs  mod.rs  pipeline.rs  runner.rs
rivet-client/: Cargo.toml
rivet-client/src/: error.rs  jobs.rs  lib.rs  pipelines.rs  runners.rs
rivet-core/: Cargo.toml
rivet-core/src/: job.rs  lib.rs  module.rs  pipeline.rs  types.rs
rivet-core/src/domain/: job.rs  log.rs  mod.rs  pipeline.rs  runner.rs
rivet-core/src/dto/: mod.rs
rivet-core/src/dto/job/: mod.rs
rivet-core/src/dto/log/: mod.rs
rivet-core/src/dto/module/: mod.rs
rivet-core/src/dto/pipeline/: mod.rs
rivet-core/src/dto/runner/: mod.rs
rivet-lua/: Cargo.toml  README.md
rivet-lua/src/: definition.rs  lib.rs  parser.rs  sandbox.rs
rivet-lua/src/modules/: env.rs  log.rs  mod.rs
rivet-orchestrator/: Cargo.toml  README.md
rivet-orchestrator/src/: db.rs  main.rs
rivet-orchestrator/src/api/: error.rs  health.rs  job.rs  mod.rs  pipeline.rs  runner.rs  stubs.rs
rivet-orchestrator/src/repository/: job.rs  log.rs  mod.rs  pipeline.rs  runner.rs
rivet-orchestrator/src/service/: job.rs  log.rs  mod.rs  pipeline.rs  runner.rs
rivet-orchestrator/stubs/: container.lua  input.lua  log.lua  output.lua  pipeline.lua
rivet-runner/: Cargo.toml  README.md
rivet-runner/src/: config.rs  context.rs  execution.rs  main.rs  podman.rs
rivet-runner/src/lua/: executor.rs  mod.rs  sandbox.rs  sinks.rs
rivet-runner/src/lua/modules/: container.rs  env.rs  input.rs  log.rs  mod.rs  process.rs
rivet-runner/src/repository/: jobs.rs  logs.rs  mod.rs  runners.rs
rivet-runner/src/scheduler/: mod.rs  poller.rs
rivet-runner/src/service/: capabilities.rs  execution.rs  log_buffer.rs  mod.rs
