[package]
name = "rivet-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rivet-core = { path = "../rivet-core" }
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
anyhow = "1.0"
colored = "2.1"
