[package]
name = "rivet-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core domain types
rivet-core = { path = "../rivet-core" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# UUID support
uuid = { version = "1.19.0", features = ["serde", "v4"] }

# Async trait support
async-trait = "0.1"
