[package]
name = "rivet-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
chronos = "0.0.0"
mlua = { version = "0.11", features = ["lua54", "send"] }
serde.workspace = true
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
