[package]
name = "rivet-lua"
version = "0.1.0"
edition = "2024"

[dependencies]
rivet-core = { path = "../rivet-core" }
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serialize"] }
serde = { workspace = true }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
tokio = { workspace = true }
