[package]
name = "rivet-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
rivet-core = { path = "../rivet-core" }
rivet-lua = { path = "../rivet-lua" }
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
axum = "0.8.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
