[package]
name = "rivet-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
rivet-core = { path = "../rivet-core" }
rivet-lua = { path = "../rivet-lua" }
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "async", "send", "serialize", "anyhow"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
